# Raptor---Regressionsanalyse-potentiometrischer-Titrationen-fuer-optimierte-Resultate

./: README.md  potentiometrie.py  pyproject.toml  requirements.txt
potentio_gui/: __init__.py  __main__.py  config.py  environment.py
potentio_gui/lib/: potentiometrie.py
potentio_gui/ui/: MainWindow.py  Menubar.py  Potentiometrie.py
potentio_gui/ui/PotentiometrieWidgets/: DataInput.py  MenuBar.py  PlotCanvas.py
potentio_gui/ui/assets/: __init__.py
potentio_gui/ui/dialog/: ExcelImport.py
