[project]
name = "potentio_gui"
version = "0.1.0"
description = ""
authors = [{name = "MaFeLP", email = "mafelp@proton.me"}]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lmfit>=1.3.4",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.0",
    "pandas-stubs==3.0.0.260204",
    "pyqt6>=6.10.2",
    "pyxdg>=0.28",
    "scipy>=1.17.0",
    "scipy-stubs==1.17.0.2",
    "xlwings>=0.33.20",
]

[dependency-groups]
dev = [
    "black>=26.1.0",
    "pyinstaller>=6.19.0",
]
